--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-notifications": "^1.7.4",
-    "react-redux": "^9.0.3",
+    "react-redux": "^9.0.4",
     "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
   },
